...
                android:inputType="textPassword"
                android:padding="12dp"
                android:textSize="18sp"
                android:elevation="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signUpRegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/black"
                android:padding="10dp"
...
